[project]
name = "AstroUtils"
description = "A collection of astronomy modules"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "SF-ARI", email = "" },
]
dependencies = [
  
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
]



[project.urls]
repository = "https://github.com/SF-ARI/AstroUtils" 

[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=3.4",
  "wheel",

]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "AstroUtils/version.py"

[tool.pytest.ini_options]
testpaths = [
  "AstroUtils",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "AstroUtils/__init*",
 "AstroUtils/conftest.py",
 "AstroUtils/*setup_package*",
 "AstroUtils/tests/*",
 "AstroUtils/*/tests/*",
 "AstroUtils/extern/*",
 "AstroUtils/version*",
 "*/AstroUtils/__init*",
 "*/AstroUtils/conftest.py",
 "*/AstroUtils/*setup_package*",
 "*/AstroUtils/tests/*",
 "*/AstroUtils/*/tests/*",
 "*/AstroUtils/extern/*",
 "*/AstroUtils/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_", 
]
