[metadata]
name = AstroUtils
version = 0.1.0
author = SF-ARI
author_email = SF-ARI@ljmu.ac.uk
license = Other
license_files = licenses/LICENSE.rst
url = https://github.com/SF-ARI/AstroUtils
description = A collection of astronomy modules
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = SF-ARI/AstroUtils

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    matplotlib
    spectral_cube
    pyspeckit
    lmfit
    tqdm
    uncertainties


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
AstroUtils = data/*

[tool:pytest]
testpaths = "AstroUtils" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    AstroUtils/_astropy_init*
    AstroUtils/conftest.py
    AstroUtils/*setup_package*
    AstroUtils/tests/*
    AstroUtils/*/tests/*
    AstroUtils/extern/*
    AstroUtils/version*
    */AstroUtils/_astropy_init*
    */AstroUtils/conftest.py
    */AstroUtils/*setup_package*
    */AstroUtils/tests/*
    */AstroUtils/*/tests/*
    */AstroUtils/extern/*
    */AstroUtils/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
